Improve hero section formatting and update social icons
- Format hero text with better structure and styling
- Remove README link section
- Update social icons to use Lucide-style SVG icons for Bluesky, Quora, and Medium
- Fix blog post category and remove problematic MDX components
- Clean up imports and component references

--- a/src/data/blog/finite-elements-to-human-elements-engineering-career.mdx
+++ b/src/data/blog/finite-elements-to-human-elements-engineering-career.mdx
@@ -5,7 +5,7 @@ publishDate: 2025-09-12
 pubDatetime: 2025-09-12T10:00:00.000Z
 tags:
   ["engineering", "decision-science", "ai", "product-leadership", "neuroscience", "career-transition"]
-category: "personal-journey"
+category: "technical"
 readTime: 12
 featuredImage: "/images/finite-to-human-elements.png"
 draft: false
@@ -17,9 +17,6 @@ relatedPosts: ["systems-thinking-product-management", "neuroscience-customer-att
 cluster: "engineering-to-product"
 ---
 
-import { Graph } from '../components/Graph.astro'
-import { Callout } from '../components/Callout.astro'
-import { CodeBlock } from '../components/CodeBlock.astro'
 
 *How transitioning from structural engineering to AI product leadership taught me that understanding human decision-making is more complex—and more rewarding—than any finite element analysis.*
 
@@ -33,29 +30,6 @@ While I could predict exactly how concrete would behave under load, I watched pr
 
 That dissonance launched a journey from analyzing structural systems to understanding the most complex system of all—the human mind making decisions under uncertainty.
 
-<Graph 
-  nodes={[
-    { id: "structural-eng", label: "Structural Engineering", x: 100, y: 300, color: "#8B5CF6" },
-    { id: "systems-thinking", label: "Systems Thinking", x: 300, y: 200, color: "#06B6D4" },
-    { id: "data-analysis", label: "Data Analysis", x: 300, y: 400, color: "#06B6D4" },
-    { id: "decision-science", label: "Decision Science", x: 500, y: 250, color: "#10B981" },
-    { id: "behavioral-eng", label: "Behavioral Engineering", x: 700, y: 200, color: "#F59E0B" },
-    { id: "ai-product", label: "AI Product Leadership", x: 700, y: 350, color: "#EF4444" },
-    { id: "neuroai", label: "NeuroAI Applications", x: 900, y: 275, color: "#EC4899" }
-  ]}
-  edges={[
-    { from: "structural-eng", to: "systems-thinking", label: "foundation" },
-    { from: "structural-eng", to: "data-analysis", label: "analytical skills" },
-    { from: "systems-thinking", to: "decision-science", label: "human systems" },
-    { from: "data-analysis", to: "decision-science", label: "measurement" },
-    { from: "decision-science", to: "behavioral-eng", label: "applied insights" },
-    { from: "decision-science", to: "ai-product", label: "product strategy" },
-    { from: "behavioral-eng", to: "neuroai", label: "technical implementation" },
-    { from: "ai-product", to: "neuroai", label: "market application" }
-  ]}
-  title="Journey from Engineering to Decision Science"
-  description="The evolution from analyzing physical structures to understanding cognitive structures"
-/>
 
 ## The Engineering Mindset: A Foundation, Not a Limitation
 
@@ -63,9 +37,7 @@ People assume that transitioning from engineering to behavioral science means ab
 
 These skills translate powerfully to decision science, but with a crucial twist. In structural engineering, materials have known properties. Steel yields at predictable stress levels. Concrete fails according to established formulas. The beauty of finite element analysis lies in this predictability—you can model reality with mathematical precision.
 
-<Callout type="insight">
-**The Engineering Translation**: Just as we divide complex structures into finite elements for analysis, we can divide complex decisions into cognitive components—attention allocation, memory retrieval, probability assessment, and value computation.
-</Callout>
+> **The Engineering Translation**: Just as we divide complex structures into finite elements for analysis, we can divide complex decisions into cognitive components—attention allocation, memory retrieval, probability assessment, and value computation.
 
 Human decision-making operates differently. Instead of yield strength, we work with cognitive biases. Instead of stress-strain curves, we analyze probability weighting functions. Instead of material fatigue, we study mental fatigue and its impact on judgment quality.
 
@@ -79,7 +51,6 @@ The breakthrough moment came during a project optimizing construction workflows.
 
 We needed to engineer the decision environment, not just the physical environment.
 
-<CodeBlock language="python" title="Decision Environment Optimization">
 ```python
 # Traditional engineering approach
 def optimize_workflow(equipment, materials, timeline):
@@ -98,7 +69,6 @@ def optimize_decision_environment(context, cognitive_load, social_dynamics):
         social_proof
     )
 ```
-</CodeBlock>
 
 This realization led me to explore how environmental design influences choice architecture. Richard Thaler's work on nudging revealed that small changes in how options are presented can dramatically improve decision outcomes—without restricting choice or changing incentives.
 
@@ -114,9 +84,7 @@ In education, we discovered that teachers' technology adoption followed predicta
 
 Now at North AI, we're building systems that understand attention and engagement at a neurological level. We're literally measuring how brains respond to content, then using that data to predict audience reactions. It's finite element analysis for human attention—breaking complex psychological responses into measurable, predictable components.
 
-<Callout type="technical">
-**Attention Modeling Framework**: We divide video content into temporal segments (like finite elements) and model cognitive load, visual salience, and emotional response at each segment. This allows us to predict engagement patterns and optimize content structure for maximum impact.
-</Callout>
+> **Attention Modeling Framework**: We divide video content into temporal segments (like finite elements) and model cognitive load, visual salience, and emotional response at each segment. This allows us to predict engagement patterns and optimize content structure for maximum impact.
 
 ## The Neuroscience Connection: Where Engineering Meets Psychology
 
@@ -179,9 +147,7 @@ The risks are equally significant. The same principles that enable better decisi
 
 At North AI, we're committed to transparent, empowering applications of attention science. Our goal isn't to hack attention for engagement maximization, but to help creators understand and respect their audiences' cognitive resources.
 
-<Callout type="ethics">
-**Ethical Framework**: Just as structural engineers include safety factors in their designs, behavioral engineers must include ethical safeguards—transparency about influence mechanisms, user agency preservation, and alignment with long-term human wellbeing.
-</Callout>
+> **Ethical Framework**: Just as structural engineers include safety factors in their designs, behavioral engineers must include ethical safeguards—transparency about influence mechanisms, user agency preservation, and alignment with long-term human wellbeing.
 
 ## The Personal Transformation
 
