--- a/src/data/blog/statistical-significance-vs-behavioral-significance-pm-dilemma.mdx
+++ b/src/data/blog/statistical-significance-vs-behavioral-significance-pm-dilemma.mdx
@@ -14,7 +14,7 @@ tags:
   - user-behavior
 category: statistics
 description: "When 95% confidence isn't enough - understanding the critical difference between statistical significance and behavioral significance in product decisions."
-ogImage: /assets/images/statistical-behavioral-significance.png
+ogImage: ""
 canonicalURL: ""
 hideEditPost: false
 timezone: "Europe/London"
@@ -27,10 +27,7 @@ importance: 8
 cluster: "product-analytics"
 ---
 
-import { Callout } from '@/components/Callout';
-import { Chart } from '@/components/Chart';
-import { EffectSizeCalculator } from '@/components/EffectSizeCalculator';
-import { DecisionTree } from '@/components/DecisionTree';
+import CalloutBox from '@/components/CalloutBox.astro';
 
 # Statistical Significance vs Behavioral Significance: A PM's Dilemma
 
@@ -38,9 +35,9 @@ You've just shipped a new feature. Your A/B test shows a 2.3% increase in conver
 
 Welcome to one of product management's most misunderstood statistical concepts: the critical difference between statistical significance and behavioral significance. Understanding this distinction isn't just academic—it's the difference between celebrating vanity metrics and driving real user behavior change.
 
-<Callout type="warning" title="The Reality Check">
+<CalloutBox type="warning" title="The Reality Check">
 Statistical significance tells us whether a difference exists, but behavioral significance tells us whether that difference matters to your users and business.
-</Callout>
+</CalloutBox>
 
 ## Table of contents
 
@@ -60,9 +57,9 @@ Think of it this way: if you test button colors on 100,000 users, you might dete
 
 Large sample sizes make everything statistically significant. With enough data points, even meaningless differences become "significant." This creates a dangerous illusion of meaningful discovery when you're often just measuring statistical noise elevated to significance.
 
-<Callout type="insight" title="Real-World Example">
+<CalloutBox type="info" title="Real-World Example">
 An e-commerce company tested two checkout flows with 50,000 users each. They found a statistically significant 0.8% improvement in conversion rate (p = 0.023). Celebrating this "win," they implemented the new flow company-wide, only to see no meaningful change in actual revenue or user satisfaction scores.
-</Callout>
+</CalloutBox>
 
 ## Effect Sizes: The Missing Piece of Your Analytics Puzzle
 
@@ -72,18 +69,15 @@ Effect size measures the magnitude of difference between groups—essentially, h
 
 Cohen's d standardizes the difference between two means, making it comparable across different metrics. Here's how to interpret it:
 
-<Chart 
-  type="bar" 
-  data={{
-    labels: ['Small Effect (d = 0.2)', 'Medium Effect (d = 0.5)', 'Large Effect (d = 0.8)'],
-    datasets: [{
-      label: 'Effect Size Magnitude',
-      data: [0.2, 0.5, 0.8],
-      backgroundColor: ['#f59e0b', '#3b82f6', '#10b981']
-    }]
-  }}
-  title="Cohen's d Effect Size Interpretation"
-/>
+**Cohen's d Effect Size Interpretation:**
+
+| Effect Size | Cohen's d | Interpretation |
+|-------------|-----------|----------------|
+| Small | 0.2 | Noticeable but minimal impact |
+| Medium | 0.5 | Moderate practical significance |
+| Large | 0.8 | Substantial practical significance |
+
+*Note: These are general guidelines. Context matters significantly in interpreting effect sizes.*
 
 Let's apply this to a concrete example. Imagine you're testing two onboarding flows:
 
@@ -92,7 +86,12 @@ Let's apply this to a concrete example. Imagine you're testing two onboarding fl
 
 The difference is 0.6 minutes with a pooled standard deviation of 1.75, giving us Cohen's d = 0.34. This represents a small-to-medium effect size—potentially meaningful, but requiring deeper investigation into user behavior patterns.
 
-<EffectSizeCalculator />
+**Quick Effect Size Calculator:**
+Cohen's d = (Mean₁ - Mean₂) / Pooled Standard Deviation
+
+Where Pooled SD = √[(SD₁² + SD₂²) / 2]
+
+*Tip: Use online calculators or spreadsheet formulas to automate this calculation for your experiments.*
 
 ### Practical Significance Thresholds
 
@@ -118,13 +117,13 @@ For subscription products, ask: "What retention rate improvement would justify t
 
 Psychology research reveals specific thresholds where users begin noticing differences:
 
-<Callout type="research" title="Perception Science">
+<CalloutBox type="info" title="Perception Science">
 **Response Times**: Users perceive differences around 20% changes in load times. A reduction from 2.0 to 1.9 seconds? Unlikely to be noticed. From 2.0 to 1.6 seconds? Now we're talking.
 
 **Visual Changes**: The just-noticeable difference for visual elements varies by context, but generally requires 10-15% changes in size, spacing, or contrast to be consciously perceived.
 
 **Content Changes**: Text modifications need substantial rewording before users notice. Simply changing "Sign up" to "Get started" rarely drives meaningful behavior change, despite potential statistical significance.
-</Callout>
+</CalloutBox>
 
 ## Case Study: The Checkout Button That Wasn't
 
@@ -138,50 +137,33 @@ Let me share a cautionary tale from my experience. We tested checkout button cop
 
 Despite statistical significance, the effect size was trivial. More importantly, follow-up user interviews revealed that none of the 47 participants we spoke with could recall or articulate any difference between the variants. We had detected statistical noise, not meaningful user preference.
 
-<Callout type="lesson" title="Key Insight">
+<CalloutBox type="warning" title="Key Insight">
 The real insight came from analyzing the confidence interval width. With such a narrow range of potential effects, even the upper bound (2.35% improvement) wouldn't substantially impact quarterly goals. We were optimizing within measurement error rather than driving meaningful behavior change.
-</Callout>
+</CalloutBox>
 
 ## Practical Framework: The Significance Decision Tree
 
 When evaluating test results, work through this framework:
 
-<DecisionTree 
-  steps={[
-    {
-      title: "Statistical Foundation",
-      questions: [
-        "Is the result statistically significant at your predetermined alpha level?",
-        "What's the confidence interval range?",
-        "Does the sample size support reliable conclusions?"
-      ]
-    },
-    {
-      title: "Effect Size Analysis", 
-      questions: [
-        "Calculate Cohen's d or appropriate effect size metric",
-        "Compare against your industry benchmarks",
-        "Consider the metric's baseline variability"
-      ]
-    },
-    {
-      title: "Behavioral Reality Check",
-      questions: [
-        "Would users notice this change in normal usage?",
-        "Does the effect size exceed known perception thresholds?",
-        "What do qualitative insights suggest about user awareness?"
-      ]
-    },
-    {
-      title: "Business Impact Assessment",
-      questions: [
-        "Does the confidence interval include your MPSE?",
-        "What are implementation and opportunity costs?",
-        "How does this change align with strategic priorities?"
-      ]
-    }
-  ]}
-/>
+**1. Statistical Foundation**
+- Is the result statistically significant at your predetermined alpha level?
+- What's the confidence interval range?
+- Does the sample size support reliable conclusions?
+
+**2. Effect Size Analysis**
+- Calculate Cohen's d or appropriate effect size metric
+- Compare against your industry benchmarks
+- Consider the metric's baseline variability
+
+**3. Behavioral Reality Check**
+- Would users notice this change in normal usage?
+- Does the effect size exceed known perception thresholds?
+- What do qualitative insights suggest about user awareness?
+
+**4. Business Impact Assessment**
+- Does the confidence interval include your MPSE?
+- What are implementation and opportunity costs?
+- How does this change align with strategic priorities?
 
 ## Beyond P-Values: Advanced Considerations
 
@@ -193,9 +175,9 @@ Rather than fixating on point estimates, examine confidence intervals to underst
 
 Bayesian analysis incorporates prior knowledge and provides more intuitive probability statements about effect sizes. Instead of "rejecting null hypotheses," you can directly estimate the probability that your effect exceeds practical significance thresholds.
 
-<Callout type="advanced" title="Bayesian Thinking">
+<CalloutBox type="info" title="Bayesian Thinking">
 Bayesian approaches ask: "Given our data and prior knowledge, what's the probability that our effect size exceeds the minimum practically significant threshold?" This directly addresses the business question you actually care about.
-</Callout>
+</CalloutBox>
 
 ### Meta-Analysis Thinking
 
@@ -215,9 +197,9 @@ The goal isn't to abandon statistical rigor—it's to complement statistical sig
 
 **Business Context Integration**: Create templates that require connecting statistical results to business outcomes. What would this effect size mean for quarterly metrics? Annual revenue? User satisfaction scores?
 
-<Callout type="takeaway" title="The Bottom Line">
+<CalloutBox type="success" title="The Bottom Line">
 The most successful product managers treat statistical significance as a necessary but insufficient condition for decision-making. They understand that in the pursuit of user-centered products, behavioral significance isn't just a nice-to-have—it's the entire point.
-</Callout>
+</CalloutBox>
 
 Your users are the ultimate judges of significance. Statistical tools should help you understand their behavior, not replace their voices in your decision-making process.
 
