Add concept system with knowledge graph integration
- Add comprehensive concept collection (A/B testing, cognitive load, etc.)
- Implement ConceptCard and ConceptPost layouts
- Add ObsidianGraph component with neural network visualization
- Integrate concept linking system in blog posts
- Add concept images and SVG assets
- Update blog posts with concept integration
- Add new engineering-focused blog post on generative AI history

--- a/src/data/blog/example-concept-integration.mdx
+++ b/src/data/blog/example-concept-integration.mdx
@@ -1,7 +1,7 @@
 ---
 author: Lucas Cazelli
 pubDatetime: 2024-01-15T10:00:00Z
-title: "From Finite Elements to Finite Attention: Engineering Principles in Product Design"
+title: "example"
 slug: example-concept-integration
 featured: true
 draft: false
